[package]
name = "conc-map-bench"
version = "0.1.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
bustle = "0.5.1"
tracing-subscriber = "0.3"
num_cpus = "1.17.0"
ahash = "0.8.12"
chashmap = "2.2.2"
contrie = "0.1.4"
flurry = "0.5.2"
dashmap = { version = "6.1.0", features = ["inline"] }
crossbeam-epoch = { version = "0.9.18", package = "crossbeam-epoch" }
parking_lot = "0.12.4"
evmap = "10.0.2"
seize = "0.3.3"
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam" }
structopt = "0.3.26"
json = "0.12.4"
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
plotters = "0.3.7"
scc = "2.3.4"

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"
